syntax = "proto3";
import "push.ext.proto"; 
package pb;

option go_package = "../pb";

service ConnectInt { 
  // 发送消息 
  rpc DeliverMessage (PushMsgReq) returns (PushMsgReply); 
}
